# keep-account

./: BUILD.md  Cargo.toml  DEPLOYMENT.md  README.md  error_log.txt  setup-android-env.nu  styles.css
.cargo/: config.toml
.github/workflows/: release.yml
rolling-logger/: Cargo.toml
rolling-logger/src/: lib.rs
src/: api.rs  app.rs  main.rs  mobile_transaction.rs  summary.rs  types.rs
src-tauri/: Cargo.toml  build_check.txt  build_check_final.txt  build_error.txt  build_result.txt  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/repository/: category_repo.rs  installment_repo.rs  mod.rs  transaction_repo.rs
src/components/: category_manager.rs  desktop_transaction.rs  installment_manager.rs  mod.rs
src/mobile/: category_form.rs  form.rs  installment_form.rs  liquid_container.rs  list.rs  mod.rs  nav.rs  sync_settings.rs  view.rs
src/shared/: api_helpers.rs  icons.rs  mod.rs  validators.rs
