[package]
name = "keep-accounts-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos 0.8 (matching workspace version)
leptos = { version = "0.8", features = ["csr"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "MouseEvent",
]}

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = "0.1.7"

# Date/time
chrono = "0.4"

[workspace]
members = ["src-tauri", "rolling-logger"]

[workspace.dependencies]
# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-shell = "2"

tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"

# Leptos dependencies
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Database dependencies
libsql = { version = "0.9", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
