[package]
name = "rolling-logger"
version = "0.1.0"
edition = "2021"
description = "A rolling file logger with circular buffer for Tauri applications"
authors = ["you"]
license = "MIT"

[dependencies]
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }