[package]
name = "keep-accounts"
version = "0.1.0"
description = "A simple bookkeeping app"
authors = ["you"]
edition = "2021"

[lib]
name = "keep_accounts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rolling-logger = { path = "../rolling-logger" }
log = "0.4"

# Async support
tokio = { workspace = true }

# Database (libsql for Turso cloud sync support)
libsql = { workspace = true }
chrono = { workspace = true }

