[package]
name = "keep-accounts"
version = "0.1.0"
description = "A simple bookkeeping app"
authors = ["you"]
edition = "2021"

[lib]
name = "keep_accounts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rolling-logger = { git = "https://github.com/liu0fanyi/tauri-crates.git" }
log = "0.4"
android_logger = "0.13"

# Async support
tokio = { workspace = true }

# Database (now using shared sync crate)
tauri-sync-db-backend = { git = "https://github.com/liu0fanyi/tauri-crates.git" }
libsql = { workspace = true }
chrono = { workspace = true }

# HTTP client for cloud connection validation
# HTTP client for cloud connection validation
# HTTP client for cloud connection validation
tauri-plugin-http = "2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.25", features = ["http1", "http2", "webpki-tokio", "tls12"] }

